Fixed overflow issue with editor toolbar right group.

--- a/src/components/EditorPanel/Panel.scss
+++ b/src/components/EditorPanel/Panel.scss
@@ -13,6 +13,7 @@
         display: none;
     }
     .editorToolbar {
+        overflow-x: scroll;
         background-color: $navbarRightBackground !important;
         .leftEditorToolbar {
             .leftButtonGroup {
